--- a/styles/_user-profiles.scss
+++ b/styles/_user-profiles.scss
@@ -339,6 +339,8 @@
 
     &-image {
       height: 40px;
+      width: 40px;
+      margin-right: 12px;
 
       img {
         max-height: 40px;
